--- a/index.html
+++ b/index.html
@@ -176,8 +176,22 @@
     </div>
 
     <div class="leaderboard">
-        Leaderboard wkrótce...
-    </div>
+    <h3>Leaderboard wkrótce...</h3>
+    <input type="text" id="playerNick" placeholder="Wprowadź swój nick">
+    <button id="submitNick">Zapisz Nick</button>
+    <table id="leaderboardTable">
+        <thead>
+            <tr>
+                <th>Nick</th>
+                <th>Buszonki</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Tabela wyników będzie tutaj -->
+        </tbody>
+    </table>
+</div>
+
 
     <!-- Reset Button -->
     <div class="reset-container">
