--- a/index.html
+++ b/index.html
@@ -175,22 +175,22 @@
         </div>
     </div>
 
-    <div class="leaderboard">
-    <h3>Leaderboard wkrótce...</h3>
-    <input type="text" id="playerNick" placeholder="Wprowadź swój nick">
-    <button id="submitNick">Zapisz Nick</button>
-    <table id="leaderboardTable">
-        <thead>
-            <tr>
-                <th>Nick</th>
-                <th>Buszonki</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Tabela wyników będzie tutaj -->
-        </tbody>
-    </table>
-</div>
+    <section class="leaderboard">
+        <h3>Leaderboard</h3>
+        <input type="text" id="playerNick" placeholder="Wprowadź swój nick">
+        <button id="submitNick">Zapisz Nick</button>
+        <table id="leaderboardTable">
+            <thead>
+                <tr>
+                    <th>Nick</th>
+                    <th>Buszonki</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Dynamiczne dane -->
+            </tbody>
+        </table>
+    </section>
 
 
     <!-- Reset Button -->
@@ -200,5 +200,6 @@
 
     <script src="script.js"></script>
     <script src="script2.js"></script>
+    <script src="firebase.js" type="module"></script>
 </body>
 </html>
