--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
         <button id="resetButton">Reset Postępu</button>
     </div>
 
-    <script src="script.js"></script>
-    <script src="script2.js"></script>
+    <script src="script.js" type="module></script>
+    <script src="script2.js" type="module></script>
     <script src="firebase.js" type="module"></script>
 </body>
 </html>
