--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
         <button id="resetButton">Reset Postępu</button>
     </div>
 
-    <script src="script.js" type="module"></script>
+    <script type="module" src="firebase.js"></script>
+	<script type="module" src="script.js"></script>
     <script src="script2.js" ></script>
-    <script src="firebase.js" type="module"></script>
 </body>
 </html>
