--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
     <section class="leaderboard">
         <h3>Leaderboard</h3>
-        <input type="text" id="playerNick" placeholder="Wprowadź swój nick">
+        <input type="text" id="nickInput" placeholder="Wprowadź swój nick">
         <button id="submitNick">Zapisz Nick</button>
         <table id="leaderboardTable">
             <thead>
@@ -200,6 +200,6 @@
 
     
 	<script type="module" src="script.js"></script>
-	<script src="script2.js"></script>
+    <script src="script2.js" ></script>
 </body>
 </html>
