--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
     <section class="leaderboard">
         <h3>Leaderboard</h3>
-        <input type="text" id="nickInput" placeholder="Wprowadź swój nick">
+        <input type="text" id="playerNick" placeholder="Wprowadź swój nick">
         <button id="submitNick">Zapisz Nick</button>
         <table id="leaderboardTable">
             <thead>
