--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
 
     <section class="leaderboard">
         <h3>Leaderboard</h3>
+	<button id="loginButton">Zaloguj się przez Google</button>
         <input type="text" id="playerNick" placeholder="Wprowadź swój nick">
         <button id="submitNick">Zapisz Nick</button>
         <table id="leaderboardTable">
