--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="logo">
         <h1>Buszko Clicker</h1>
         <h5>Pre-alpha.v.0.7</h5>
+	<div id="userInfo"></div>
     </div>
     <div class="BuszkoClicker">
         <div class="info">
