--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
     <section class="leaderboard">
         <h3>Leaderboard</h3>
 	<button id="loginButton">Zaloguj się przez Google</button>
+	<button id="logoutButton">Wyloguj się</button>
         <input type="text" id="playerNick" placeholder="Wprowadź swój nick">
         <button id="submitNick">Zapisz Nick</button>
         <table id="leaderboardTable">
