--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 </div>
                 </div>
             </div>
-		<section class="leaderboard">
+		<section class="leaderboard" class="tab-section hidden">
 	        <h3>Leaderboard</h3>
 		<button id="loginButton" class="log">Zaloguj się przez Google</button>
 		    <br>
