--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 </div>
             </div>
 		<section class="leaderboard" class="tab-section hidden">
-	        <h3>Leaderboard</h3>
+	        <h3>Tabela Wyników</h3>
 		<button id="loginButton" class="log">Zaloguj się przez Google</button>
 		    <br>
 	        <input type="text" id="playerNick" placeholder="Wprowadź swój nick">
