--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 </div>
                 </div>
             </div>
-		<section class="leaderboard" class="tab-section hidden">
+		<div class="leaderboard tab-section hidden">
 	        <h3>Tabela Wyników</h3>
 		<button id="loginButton" class="log">Zaloguj się przez Google</button>
 		    <br>
@@ -191,7 +191,7 @@
 	                <!-- Dynamiczne dane -->
 	            </tbody>
 	        </table>
-	    </section>
+	    </div>
         </div>
     </div>
 
