--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 </div>
                 </div>
             </div>
-		<div class="leaderboard tab-section hidden">
+		<div id="leaderboardSection" class="leaderboard tab-section hidden">
 	        <h3>Tabela Wyników</h3>
 		<button id="loginButton" class="log">Zaloguj się przez Google</button>
 		    <br>
